[package]
name = "email-template"
version = "0.1.0"
authors = ["Daehwan Lee <redface0512@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.59" }
regex = { version = "1.4.2" }
#emailmessage = { version = "0.2.2" }
lettre = { version = "0.10.0-alpha.4" }
