[package]
name = "email-template"
version = "0.1.1"
authors = ["Daehwan Lee <redface0512@gmail.com>"]
edition = "2018"
description = "Email template generator"
documentation = "https://github.com/Redface/email-template/blob/main/README.md"
homepage = "https://github.com/Redface/email-template"
repository = "https://github.com/Redface/email-template"
readme = "README.md"
license = "MIT"
keywords = ["email", "email-template"]

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.59" }
regex = { version = "1.4.2" }
lettre = { version = "0.10.0-alpha.4" }
